<resources>
    <string name="app_name">DietAssistant</string>
    <string name="default_product_name">Nazwa produktu</string>
    <string name="macro_ingredients">Makroskładniki</string>
    <string name="carbohydrates">Węgle</string>
    <string name="gram">gram</string>
    <string name="protein">Białko</string>
    <string name="fat">Tłuszcz</string>
    <string name="update_product">Aktualizuj produkt</string>
    <string name="add_product">Dodaj produkt</string>
    <string name="calories">Kalorie</string>
    <string name="kcal">kcal</string>
    <string name="delete_product">Jesteś pewien że chcesz usunąć ten produkt?</string>
    <string name="default_cancel">Anuluj</string>
    <string name="default_delete">Usuń</string>
    <string name="vegetables">Warzywa</string>
    <string name="fruits">Owoce</string>
    <string name="nuts">Orzechy</string>
    <string name="carbos">Kasza / Ryż / Makaron / Ziemniaki</string>
    <string name="meats">Mięso</string>
    <string name="breads">Pieczywo</string>
    <string name="unknown">nieznane</string>
    <string name="category">Kategoria</string>
    <string name="default_meal_name">Nazwa posiłku</string>
    <string name="default_products">Produkty</string>
    <string name="default_meals">Posiłki</string>
    <string name="update_meal">Zaktualizuj posiłek</string>
    <string name="add_meal">Dodaj posiłek</string>
    <string name="all_default">all</string>
    <string name="product_already_added">Produkt juz jest dodany do posilku</string>
    <string name="quantity_in_gram_in_one_portion">Ilość (gram) w jednej : </string>
    <string name="carbohydrates_in_gram">Węgle (gram)</string>
    <string name="protein_in_gram">Białko (gram)</string>
    <string name="fat_in_gram">Tłuszcz (gram)</string>
    <string name="calories_in_gram">Kalorie (gram)</string>
    <string name="pieces">sztuka</string>
    <string name="packages">opakowanie</string>
    <string name="handfuls">garść</string>
    <string name="spoons">łyżeczka</string>
    <string-array name="days_prefixes">
        <item>Pon</item>
        <item>Wt</item>
        <item>Śr</item>
        <item>Czw</item>
        <item>Pt</item>
        <item>Sob</item>
        <item>Ndz</item>
    </string-array>
</resources>
