<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:lines="1"
            style="@style/TextSecondary.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carbohydrates" />

        <TextView
            android:id="@+id/carbo_text"
            style="@style/TextPrimary.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:lines="1"
            style="@style/TextSecondary.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protein" />

        <TextView
            android:id="@+id/protein_text"
            style="@style/TextPrimary.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:lines="1"
            style="@style/TextSecondary.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fat" />

        <TextView
            android:id="@+id/fat_text"
            style="@style/TextPrimary.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
